--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,5 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -33,6 +31,13 @@
   }
 }
 
+.no-select {
+  user-select: none; /* Standard syntax */
+  -webkit-user-select: none; /* For Safari and Chrome */
+  -moz-user-select: none; /* For Firefox */
+  -ms-user-select: none; /* For Internet Explorer and Edge */
+}
+
 .homepage{
   display: grid;
   grid-template-rows: 1fr;
@@ -53,6 +58,16 @@
   grid-row: 1 / 3;
   box-shadow: 6px 6px 10px 0px rgba(0, 0, 0, 0.5); 
   border-radius: 8px;
+  overflow-y: scroll;
+  margin: 10px;
+  border: 2px solid black;
+  width: 39vw;
+  scrollbar-color: black #f3ce1300;
+  scrollbar-width: 10px;
+  height: 620px;
+  max-height: 80%;
+  width: 350px;
+  max-width: 70%;
 }
 .profileImg{
   align-self: start;
@@ -73,4 +88,109 @@
   grid-column: 1;
   grid-row: 1 / 3;
   border-radius: 14px;
+}
+
+.imageContainer{
+  padding: 10px;
+  margin: 10px;
+  margin-bottom: 0;
+  border-bottom: 1px solid black;
+}
+
+.imageContainer>img{
+  max-width: 300px;
+  width: 100%;
+}
+
+.characterDetails{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 10px;
+  padding-top: 0;
+  margin: 10px;
+  margin-top: 0;
+  border-bottom: 1px solid black;
+}
+
+.quickDetails{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.characterDesc{
+  padding: 10px;
+  padding-top: 0;
+  margin: 10px;
+}
+
+.job{
+  opacity: 50%;
+  margin: 0;
+}
+
+.origin{
+  font-size: 0.8em;
+  opacity: 70%;
+  font-style: italic;
+}
+
+#arrowDiv{
+  display: flex;
+  align-self: flex-end;
+  align-items: center;
+  top: -30px;
+  position: relative;
+  font-size: 0.7em;
+}
+
+#arrowVector{
+  width: 40px;
+  display: flex;
+  align-self: flex-end;
+  transform: rotate(180deg);
+  transition: rotate 0.3s;
+}
+
+#arrowVector:hover{
+  rotate: -90deg;
+  cursor: none;
+}
+
+.moreDetails{
+  margin: 0;
+  margin-bottom: 5px;
+}
+
+.buttonWrapper{
+  display: flex;
+  border-radius: 8px;
+  align-content: center;
+  align-items: center;
+  justify-content: space-around;
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  z-index: 10;
+  background-color: #242424;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.dislikeButton{
+  background-color: red;
+  transition: scale 0.2s;
+}
+
+.likeButton{
+  background-color: rgb(0, 191, 0);
+  transition: scale 0.2s;
+}
+
+.dislikeButton:hover,
+.likeButton:hover{
+  scale: 1.4;
 }
