--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,13 @@
   --scrollbar-color: black #f3ce1300
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: 500;
+}
+
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -70,11 +77,32 @@
   width: 350px;
   max-width: 78%;
 }
-.profileImg{
+
+.profileContainer{
+  display: flex;
+  flex-direction: column;
   align-self: start;
   justify-self: end;
   grid-column: 3;
   grid-row: 1 / 3;
+  border-left: 2px solid black;
+  width: max-content;
+  height: 100%;
+  border-radius: 8px;
+}
+
+.profileImg{
+  width: 73px;
+  border-radius: 100%;
+  margin: 15px;
+  border: 3px solid transparent; 
+  transition: border-color 0.5s;
+  box-sizing: border-box;
+}
+
+.profileImg:hover{
+  cursor: pointer;
+  border: 3px solid magenta;
 }
 
 .messagesContainer{
@@ -89,6 +117,7 @@
   grid-column: 1;
   grid-row: 1 / 3;
   border-radius: 14px;
+  border-right: 2px solid black;
 }
 
 .imageContainer{
@@ -232,4 +261,11 @@
 .racesDiv label{
   display: block;
   margin-bottom: 5px;
+}
+
+.profileImgModal{
+  display: flex;
+  flex-direction: column;
+  background-color: magenta;
+  border-radius: 8px;
 }
