Implemented loading message.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -64,6 +64,10 @@ label{
   -ms-user-select: none; /* For Internet Explorer and Edge */
 }
 
+.homepage.hidden{
+  display: none;
+}
+
 .homepage{
   display: grid;
   grid-template-rows: 1fr;
