--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,6 +150,7 @@ label {
   overflow-y: scroll;
   overflow-x: clip;
   gap: 10px;
+  scrollbar-color: var(--scrollbar-color);
 }
 
 .match{
@@ -160,6 +161,7 @@ label {
   flex-direction: column;
   border-radius: 8px;
   transition: background-color 0.3s;
+  width: 100%;
 }
 .match:hover{
   cursor: pointer;
